ADDED UNIQUE INDEX CONSTRAINTS TO categories AND items TABLES
